force-app/main/default/objects/Agent_Feedback__c/Agent_Feedback__c.object-meta.xml
<CustomObject>
    <description>Stores agent feedback on Einstein AI case suggestions and classifications.</description>
    <label>Agent Feedback</label>
    <nameField>
        <displayFormat>AF-{00000}</displayFormat>
        <label>Agent Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>