force-app/main/default/objects/Agent_Feedback__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>The Case that this feedback relates to.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Agent Feedbacks</relationshipLabel>
    <relationshipName>Agent_Feedbacks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>