force-app/main/default/objects/Agent_Feedback__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Rating of Einstein's suggestions from 1 to 5 stars.</description>
    <label>Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Not Helpful</fullName>
            </value>
            <value>
                <fullName>2 - Slightly Helpful</fullName>
            </value>
            <value>
                <fullName>3 - Helpful</fullName>
            </value>
            <value>
                <fullName>4 - Very Helpful</fullName>
            </value>
            <value>
                <fullName>5 - Outstanding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>